--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,7 +59,7 @@
     </div>
     <hr />
     <div class="d-flex flex-column flex-md-row justify-content-between">
-      <p class="my-2">© 2020 RendFx Group. All Rights Reserved</p>
+      <p class="my-2">© 2020 Sound Clear Group. All Rights Reserved</p>
     </div>
   </div>
 </div>
